--- a/static/index.html
+++ b/static/index.html
@@ -97,6 +97,10 @@
 		  <div class="col-sm-12">
 			<h1></h1>
 			<h2></h2>
+			<h3 style="text-align:center;"></h3>
+        	<a href="caption.html">
+            <button class="btn btn-primary btn-lg">AVA</button>
+       	 	</a>
 		  </div>
 		  	
 		  <div class="col-sm-8"></div>
